--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="navbar">
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
-    <a href="identity-values.html">Identity Values</a>
+    <a href="learning-plan.html">Learning Plan</a>
     <div class="dropdown">
       <button class="dropbtn">Blog +</i>
         <i class="fa fa-caret-down"></i>
@@ -33,28 +33,28 @@
   <br> <br> <br>
   <div class="section-1">
     <img src="./images/profile.jpg">
-    <h1>Kia ora and Namaste</h1>
+    <h1>Kia ora and Namaste<br>-</h1>
     <p> This is the beginning of my website home page.</p>
     <br><br>
   </div>
 
   <div class="container">
-    <a href="reflection-1.html">
+    <a href="about.html">
       <div class="block1">
-        <h2>Reflection 1</h2>
+        <h2>Who am I?</h2>
 
       </div>
     </a>
 
-    <a href="reflection-2.html">
+    <a href="learning-plan.html">
       <div class="block2">
-        <h2>Reflection 2</h2>
+        <h2>Learning Plan</h2>
       </div>
     </a>
 
-    <a href="reflection-3.html">
+    <a href="identity-values.html">
       <div class="block3">
-        <h2>Reflection 3</h2>
+        <h2>Identity Values</h2>
       </div>
     </a>
 
@@ -73,16 +73,34 @@
         <h2>Technical Blog - JS Fundamentals</h2>
       </div>
     </a>
-    <a href="#">
+    <a href="emotional-intelligence.html">
       <div class="block3">
-        <h2>empty, for now</h2>
+        <h2>Emotional intelligence</h2>
       </div>
     </a>
-
   </div>
-  </a>
-  </div>
+  <br> <br> <br> <br> <br> <br>
 
+  <div class="container">
+
+    <a href="neuroplasticity.html">
+      <div class="block1">
+        <h2>Neuro-<br>plasticity</h2>
+      </div>
+    </a>
+    <a href="problem-solving.html">
+      <div class="block2">
+        <h2>Problem Solving</h2>
+      </div>
+    </a>
+    <a href="javascript-dom.html">
+      <div class="block3">
+        <h2>Javascript DOM</h2>
+      </div>
+    </a>
+  </div>
+  <br> <br> <br> <br> <br> <br><br> <br>
+  <h1>:)</h1>
 </body>
 
 </html>
