--- a/problem-solving.html
+++ b/problem-solving.html
@@ -15,7 +15,7 @@
   <div class="navbar">
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
-    <a href="identity-values.html">Identity Values</a>
+    <a href="learning-plan.html">Learning Plan</a>
     <div class="dropdown">
       <button class="dropbtn">Blog +</i>
         <i class="fa fa-caret-down"></i>
@@ -37,19 +37,36 @@
   </div>
 
   <div class="text-box">
-    <h2><u>Tell your non-tech friend a story about a time you:</u></h2>
+    <h2><u>My experience so far:</u></h2>
     <br>
-    
-  <div class="container2">
-    <p>
-      <h1>Got blocked on a simple problem</h1>
-      <h1>Solved a problem in an elegant way.</h1>
-      <h1>What was the problem?</h1>
-      <h1>What problem solving techniques did you use?</h1>
-      <h1>How did you feel throughout the process?</h1>
-      <h1>What did you learn?</h1>
-      
-    </p>
+
+    <div class="container2">
+      <p>
+        # My experience with Problem Solving:
+        <br><br>
+        KATA has been tough. I have struggled with understanding the 'why's' of Jvascript methods.
+
+        <br><br>
+        # Problem solving techniques I used, in their order:
+        <br><br>
+        Trying something
+        <br>
+        Googling
+        <br>
+        Reading error messages
+        <br>
+        Asking your peers for help
+        <br>
+        The rubber ducky method
+        <br>
+        Console.logging
+        <br>
+        Asking coaches for help
+        <br>
+        Pseudocode
+        <br>
+        Improving your process with reflection
+      </p>
 
 </body>
 
