--- a/reflection-4.html
+++ b/reflection-4.html
@@ -15,7 +15,7 @@
   <div class="navbar">
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
-    <a href="identity-values.html">Identity Values</a>
+    <a href="learning-plan.html">Learning Plan</a>
     <div class="dropdown">
       <button class="dropbtn">Blog +</i>
         <i class="fa fa-caret-down"></i>
@@ -28,23 +28,108 @@
         <a href="reflection-5.html">Sprint // 5</a>
         <a href="reflection-foundations.html">Sprint // Foundations</a>
       </div>
-      </div>
-  <br> <br> <br>
-<div class="section-1">
-  <img src="./images/human-eye-with-binary-code-computer-artwork-ERPT08.jpg">
-    <h1>Hello! It's my Blog! whatttt!</h1>
+    </div>
   </div>
-  
-  <div class="text-box">
-    <h2><u>My Reflections // Sprint Four</u></h2>
-    <br>
-    
-    
-  <div class="container2">
-    <p>
-      404 but you found me haha. 
-    </p>
- 
+  <br> <br> <br>
+    <div class="section-1">
+      <img src="./images/human-eye-with-binary-code-computer-artwork-ERPT08.jpg">
+      <h1>Hello! It's my Blog! whatttt!</h1>
+    </div>
+
+    <div class="text-box">
+      <h2><u>My Reflections // Sprint Four</u></h2>
+      <br>
+
+
+      <div class="container2">
+        <p>
+          # My Reflections - Sprint Four
+          <br><br>
+          # Code Readability
+          <br><br>
+          ### What makes code more readable for you?
+          <br><br>
+
+          When you know where the code ends & text/content begins.
+          And when it's easy to differentiate between code & text/content.
+          ### Do you prefer tabs or spaces when indenting?
+          <br>
+
+          Spaces! Your text editor lets you customise spaces and indent multiple lines if needed!
+          <br><br>
+
+          ### What is your workspace like in real life? Clean? Messy? Is your code a reflection of that?
+          <br>
+
+          I call it an organised mess. Yea it probably is. I would like my code to be more organised though.
+          <br><br>
+
+
+          # Testing
+          <br><br>
+
+
+          function testSum(){
+          <br>
+          var expected = 7
+          <br>
+          var actual = sum(5, 2)
+          <br>
+
+          if (actual != expected) {
+          <br>
+          console.log("It's broken..")
+          <br>
+          } else {
+          <br>
+          console.log("It works!")
+          <br>
+          }
+          <br>
+          }
+          <br><br>
+          ### Have a go at writing a "sum" function below that would make the above function print out `"It works!"`:
+          <br><br>
+          console.log(testSum(7));
+          <br>
+          // expected output: "It works!"
+          <br><br>
+          ### Do you think you would prefer using Unit Testing or Test Driven Development? Why?
+          <br>
+          I would prefer using Test Driven Development, cause it would be useful to have a big picture that works, and
+          then refactor to make it more concise. This may help is saving time in the future, as I can write the test
+          before I impliment it.
+          <br><br>
+          # Kata
+          <br><br>
+          ### How did you find using repl.it in practice? Confusing? Useful?
+          <br>
+          It was a little confusing. I am curious to use it in the bootcamp to be able to run codes and definetly see
+          it's value to write our own code and save multiple files!
+          <br><br>
+          ### Was it helpful to look at the tests while coding the kata?
+          <br>
+          Yes, there is definelty a sense of validation that one is on the right track. I'm sure once we get into more
+          complex code writing, it'll be of so much value since it'll may help to run the code each step of the way.
+          <br><br>
+          ### What problem solving techniques did you implement in your coding flow?
+          <br>
+          The rubber ducky method is extremely useful and I use google as well. I do a lot of trial and error, even
+          though it can get frustrating if multiple attempts don't get you anywhere. I then reach out to the
+          facilitators.
+          <br><br>
+          ### What was the most challenging part of Super FizzBuzz for you?
+          <br>
+          The most challenging part was remembering which code to use for which part. Also, making sense of why looping
+          works the way it does, the order, and which brackects to use inside which array, super confusing!
+          <br><br>
+          ### Did you want to change and refactor your code once you were finished?
+          <br>
+          Yea, I used lse if statements and not each line separately. I also got feedback from a friend which helped
+          clean up the code annd was very helpful.
+          <br><br>
+        </p>
+
 </body>
 
 </html>
