--- a/identity-values.html
+++ b/identity-values.html
@@ -8,14 +8,14 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/style.css">
-  <title>learning plan</title>
+  <title>Identity Values</title>
 
 <body>
 
   <div class="navbar">
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
-    <a href="identity-values.html">Identity Values</a>
+    <a href="learning-plan.html">Learning Plan</a>
     <div class="dropdown">
       <button class="dropbtn">Blog +</i>
         <i class="fa fa-caret-down"></i>
@@ -33,7 +33,7 @@
   <br> <br> <br>
   <div class="section-1">
     <img src="./images/human-eye-with-binary-code-computer-artwork-ERPT08.jpg">
-    <h1>My Learning Plan</h1>
+    <h1>Identity, Values and Strengths</h1>
   </div>
 
   <div class="text-box">
@@ -43,51 +43,23 @@
 
     <div class="container2">
       <p>
-        <u> What is your long term goal and/or career pathway?</u>
-        <br><br><br>
-        Communication Designer. Boss Woman. CEO of multiple businesses.
-        <br>
-        - Working with organisations that care and give back.
-        <br>
-        - Coding to be independant + enchance my skills of: UI/UX- Making Websites, Apps, Graphic Design, AR, Visual
-        Art, all things creative. Also want to make websites and digitise the mutiple business ideas I have! Let's go!
-        <br><br><br>
-        <u> A description of your own strengths and limitations in relation to learning</u>
-        <br><br><br>
-        - In the right environment I am very focussed, work extremely hard and achieve anything I set my mind to. I can
-        make learning fun for myself and everyone around me. <br>
-        However, I get restless with a lot of reading. I've come to understand that I don't always understand the
-        generic logical analogies. I need an emotional example to understand concepts.
-        <br><br><br>
-        <u> What skills (non-technical - human skills) would you like to see developed in yourself while at EDA?</u>
-        <br><br><br>
-        - Confidence that I can do anything techinical and self-validation.
-        <br><br><br>
-        <u>A commitment to how you will manage your workload in this programme. This should include:
-          An explanation of how you will manage yourself to work productively and safely with other learners,
-          facilitators and industry/community representatives
-          What you will do when things are building up and starting to get to you</u>
-        <br><br><br>
-        - I plan to get a good nights sleep so I am well rested to focus better. I will be kind and understanding
-        towards myself and everyone around me. My timebox and me will be best friends. Pomodoro too.
-        <br><br><br>
-        <u> A commitment as to how and where you will seek help in a timely way</u><br><br><br>
-        - For work help, I'll google it, reach out to the facilitators or the people around me. Emotionally, I will call
-        a loved one/ walk/ get yummy food.
-
-        <br><br><br>
-        <u> A description of what you expect from the facilitation team</u>
-        <br><br><br>
-        - Kindness, respect and patience. I come from a design and arts education background + different culture and
-        therefore have different ways of learning. I will communicate when I don't understand an explanation and would
-        love if the team is patient with me. A check in every other day would be awesome.
-        <br><br><br>
-        <u> Any scheduling information such as block-out times when you are committed to other things. For example, you
-          might have whānau commitments like school drop-offs. It’s important to plan these in.
-          These elements do not need to be structured as they are in this list. You should put them together in the way
-          that you feel they are most clearly communicated.</u>
-        <br><br><br>
-        - I may teach kids art on Saturday mornings. I dont think there is anything else.
+        Using the evidence gathered, describe your core personal values.
+        <br><br>
+        Explain a situation where you have had an ethical decision to make. Discuss how you weighed up the values
+        involved in that decision, the decision you made and the consequences of the action you took.
+        <br><br>
+        Describe how your culture has influenced your values and identity.
+        <br><br>
+        Using the evidence gathered, describe your strengths and limitations.
+        <br><br>
+        Evaluate your strengths and limitations in terms of your learning and career development
+        <br><br>
+        Identify which of your strengths might help you in your learning journey and how they might intersect with
+        learning obstacles.
+        <br><br>
+        Share an example from your experience of where you were trying to work productively with others, but there was
+        resistance or tension. Discuss the strategies you used at that time, how effective they were, and your
+        reflections on what other strategies you would try now, and why.
       </p>
     </div>
 
