--- a/reflection-5.html
+++ b/reflection-5.html
@@ -15,7 +15,7 @@
   <div class="navbar">
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
-    <a href="identity-values.html">Identity Values</a>
+    <a href="learning-plan.html">Learning Plan</a>
     <div class="dropdown">
       <button class="dropbtn">Blog +</i>
         <i class="fa fa-caret-down"></i>
@@ -28,7 +28,8 @@
         <a href="reflection-5.html">Sprint // 5</a>
         <a href="reflection-foundations.html">Sprint // Foundations</a>
       </div>
-      </div>
+    </div>
+  </div>
   <br> <br> <br>
 <div class="section-1">
   <img src="./images/human-eye-with-binary-code-computer-artwork-ERPT08.jpg">
