--- a/reflection-foundations.html
+++ b/reflection-foundations.html
@@ -15,7 +15,7 @@
   <div class="navbar">
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
-    <a href="identity-values.html">Identity Values</a>
+    <a href="learning-plan.html">Learning Plan</a>
     <div class="dropdown">
       <button class="dropbtn">Blog +</i>
         <i class="fa fa-caret-down"></i>
