--- a/problem-solving.html
+++ b/problem-solving.html
@@ -44,28 +44,63 @@
       <p>
         # My experience with Problem Solving:
         <br><br>
-        KATA has been tough. I have struggled with understanding the 'why's' of Jvascript methods.
+        KATA has been tough. I have struggled with understanding the 'why's' of Jvascript methods. I have alot of 
+        information that I have absorbed but I found myself struggle to make sense of it, to connect the dots, to 
+        make it 'click' before the flow state begins. I felt a lack of motivation to try, but I dealt with that by 
+        completing everything I found easy, and making a checklist. Once I ticked off the easy stuff, I felt better 
+        about taking time with the technical stuff that I struggled with. Now, I can look at my list and go- "Cool, all
+        that is left is just these 5 tasks" and even if those tasks are very big concepts, when you read 5, you think, 
+        oh wow that's all?!
+        <br><br>
+        I want to say that moving throught the KATA exercises was as fun and easy as the html and ccss ones, but 
+        I got stuck in most of the KATA exercises and had to google the question or ask a friend, 
+        and I tried my best to make sense of the explanations I found and I keep revising it so I don't forget it. 
+        <br><br>
+        My learning around this is practise more, research and revisit the console.log, loops and arrays, objects cause 
+        that way it'll settle into my mind better having done these exercises. 
+        <br><br>
+        Study > Practise > Revisit study
+
 
         <br><br>
         # Problem solving techniques I used, in their order:
         <br><br>
-        Trying something
+        - Trying something
         <br>
-        Googling
+        I do trial and error for literally everything. I brainstorm and try everything possible, even if it doesn't make sense, 
+        it's important, because I know it didn't work and to try a different way next time. You gotta feed the curiosity!
+        <br><br>
+        - Googling
         <br>
-        Reading error messages
+        My best virtual friend.
+        <br><br>
+        - Reading error messages
         <br>
-        Asking your peers for help
+        <br><br>
+        - Asking your peers for help
         <br>
-        The rubber ducky method
+        <br><br>
+        - The rubber ducky method
         <br>
-        Console.logging
+        I used this more in the beginning exercises on my own, and then did it with my friends. I did it with listening and looping.
+        <br><br>
+        - Console.logging
         <br>
-        Asking coaches for help
+        <br><br>
+        - Asking coaches for help
         <br>
-        Pseudocode
+        Alot of times I got my answers in the time I waited for the coaches to get back to me. Which was a good 
+        learning for me, however, a little frustrating too. I did channel the frustration into other tasks and 
+        more extensive google search, so there's a positive side to that!:) 
+        <br><br>
+        - Pseudocode
         <br>
-        Improving your process with reflection
+        I didn't do as much of this as I'd like to have, but I am sure it will come in use further along on the coding journey.
+        <br><br>
+        - Improving your process with reflection
+        <br>
+        I think this helps. Writing. These blogs help to see how far I've come and give a sense of clarity cause 
+        I have to put words to my thoughts and learnings. It's great!
       </p>
 
 </body>
