--- a/identity-values.html
+++ b/identity-values.html
@@ -51,6 +51,10 @@
         Describe how your culture has influenced your values and identity.
         <br><br>
         Using the evidence gathered, describe your strengths and limitations.
+        <br> - In the right environment I am very focussed, work extremely hard and achieve anything I set my mind to. I can
+        make learning fun for myself and everyone around me. <br>
+        However, I get restless with a lot of reading. I've come to understand that I don't always understand the
+        generic logical analogies. I need an emotional example to understand concepts.
         <br><br>
         Evaluate your strengths and limitations in terms of your learning and career development
         <br><br>
