--- a/neuroplasticity.html
+++ b/neuroplasticity.html
@@ -45,25 +45,71 @@
                 ### Research Neuroplasticity
                 <br><br>
                 <u>Discuss how understanding the principles of neuroplasticity benefits people</u>
+                <br>
+                - Understanding the principles of neuroplasticity opens our world to the fact that when we learn,
+                we form new pathways in the brain. We can figure out how to purposefully rewire the brain, that
+                we can get smarter, better, or more skilled at something through sustained effort!
                 <br><br>
                 <u>Discuss how you might engage with the principles of neuroplasticity for your own benefit</u>
+                <br>
+                - I read this in an article of how to get started and I was so surprised to see that I had started going it already! Here goes:
+                <br><br>
+                Challenge > Intention > Specific Attention > Repetition & Intensity > Time
+                <br><br>
+                Here's how the example works for me: 
+                <br><br>
+                Challenge (coding) > Intention (For me it's creating kickass design projects) > 
+                Specific Attention (Plan. Structure. Goal. Incentive) > Repetition & Intensity (Check in) > Time (Plan for lapses – it’s normal. Refocus, adjust, keep going.)
                 <br><br>
                 <u>What are some of the ways to increase your neuroplasticity?</u>
+                <br>
+                - Mindfulness.
+                <br>
+                - Journaling and meditating. Even if it's just 5 mins a day. I also enjoy a quick sketch or painting to
+                help set the day right.
+                <br>
+                - Some form of exercise. Or dance.
+                <br>
+                - Sleep and eat well.
                 <br><br>
                 <u>Link to a resource that you found particularly useful or engaging.</u>
+                <br>
+                <a href="https://www.marksdailyapple.com/16-ways-to-increase-neuroplasticity-and-why-thats-important/">16
+                    Ways to Increase Neuroplasticity!</a>
                 <br><br>
                 ### Research Growth Mindset
                 <br><br>
                 <u>Discuss what it is and why it is relevant</u>
+                <br>
+                - Neuroplasticity and a growth mindset mirror each other. It can help you overcome obstacles 
+                when learning something new. It helps you understand the importance of persistence and determination, and the fact that you can control/rewire your brain to be that way. Game change, I'm tell you! 
+                By changing the way you think, you can change the way you learn and that's essential when immersing yourself in a 15 week bootcamp!
+                <br><br>
+                <a href="https://www.youtube.com/watch?v=rUJkbWNnNy4">This one! Even it's animation! So cute!</a>
                 <br><br>
                 <u>In this exploration, did anything surprise you? Change for you?</u>
                 <br><br>
+                - I had moments of reality checks that hey, I can get better at anything I want to with a growth mindset,
+                practise, etc. It's
+                cool to know that you got the power to be better!
+                <br><br>
                 <u>How will you integrate growth mindset into your learning journey?</u>
+                <br>
+                - I hope to integrate it by being more organised, having a structure and switching to my hustle mindset. More confidence! More learning!
                 <br><br>
                 <u>Link to a resource that you found particularly useful or engaging.</u>
+                <br>
+                <a href="https://www.youtube.com/watch?v=ENsD57ifdoo">- Talks by Aren Bahia</a>, I met him in one of the
+                festivals I went to,
+                and I really enjoy listening to people I have met and look upto, to help me see a bigger picture. All 
+                of his talks are funny and apt for where I'm at in life.
                 <br><br>
-                <u>Reflect and discuss how these understandings may shape or influence your learning plan and strategy.
-                </u>
+                <u>Reflect and discuss how these understandings may shape or influence your learning plan and strategy.</u>
+                <br><br>
+                I'm definetly feeling focussed after learning about a growth mindset, neuroplasticity, etc. 
+                It helped me have a reason to use these skills after the course, and is going to be my drive for staying motivated throughout.
+
+                
             </p>
 
 </body>
