--- a/problem-solving.html
+++ b/problem-solving.html
@@ -76,9 +76,12 @@
         <br><br>
         - Reading error messages
         <br>
+        Lived on this to proceed through each task. Infact, this was my checklist/ questionaire more than the actual question.
         <br><br>
         - Asking your peers for help
         <br>
+        I reached out to my school friends, turns out half of them are coders and they LOVE explaining. And since we grew 
+        up together, they understand how I learn and my questions, and there's zero judgement which is really helpful while learning!
         <br><br>
         - The rubber ducky method
         <br>
