--- a/identity-values.html
+++ b/identity-values.html
@@ -43,27 +43,51 @@
 
     <div class="container2">
       <p>
-        Using the evidence gathered, describe your core personal values.
+      
+        <u>Explain a situation where you have had an ethical decision to make. Discuss how you weighed up the values
+        involved in that decision, the decision you made and the consequences of the action you took.</u>
         <br><br>
-        Explain a situation where you have had an ethical decision to make. Discuss how you weighed up the values
-        involved in that decision, the decision you made and the consequences of the action you took.
+        - Back at school, there were so many incidents where people would disrespect the vulnerable ones in the class, mostly girls who were too 
+        afraid to speak up for themselves. There was one time when nobody stood up for this one girl because the guy was very 'popular' and I didn't even 
+        have to think before supporting her! Looking back, I remember standing up and supporting people I didn't even know very well 
+        if I saw them being bullied in class. I was afraid to be disliked by everyone cause it's scary to mess with people who have power, but 
+        sometimes you have to draw a line! 
         <br><br>
-        Describe how your culture has influenced your values and identity.
+        <u>Describe how your culture has influenced your values and identity.</u>
         <br><br>
-        Using the evidence gathered, describe your strengths and limitations.
-        <br> - In the right environment I am very focussed, work extremely hard and achieve anything I set my mind to. I can
-        make learning fun for myself and everyone around me. <br>
-        However, I get restless with a lot of reading. I've come to understand that I don't always understand the
+        - I'm a daughter of a desi rebellious mother who didn't/ still doesn't follow societies expectections, broke generations of trauma and is kind to everyone who crosses 
+        her path- let me tell you, growing up watching that is mind blowing. It helped lay out a path for the kind of person I want to be. It solidified that 
+        working hard for what you desire pays off. Kindness pays off. Giving back pays off.
+        <br><br>
+        <u>Using the evidence gathered, describe your strengths and limitations.</u>
+        <br> <br>
+        - In the right environment I am very focussed, work extremely hard and achieve anything I set my mind to. I can
+        make learning fun for myself and everyone around me. 
+        <br><br>
+        However, I get restless with a lot of reading or when . I've come to understand that I don't always understand the
         generic logical analogies. I need an emotional example to understand concepts.
         <br><br>
-        Evaluate your strengths and limitations in terms of your learning and career development
+        <u>Evaluate your strengths and limitations in terms of your learning and career development</u>
         <br><br>
-        Identify which of your strengths might help you in your learning journey and how they might intersect with
-        learning obstacles.
+        - I think my EQ is my strength, I have a vision of where I'd like to be and I work towards it. Slowly, but steadily and I get there. 
+        However, my confidence when I don't get something right after trying a few times, is my weakness. I want to have more self confidence and 
+        be content with self-validation.
         <br><br>
-        Share an example from your experience of where you were trying to work productively with others, but there was
+        <u>Identify which of your strengths might help you in your learning journey and how they might intersect with
+        learning obstacles.</u>
+        <br><br>
+        - I beleive my focus when I am interested in something and my determination once I am invested in a project, I become unstoppable. I also 
+        think I am aware when I am losing interest when something gets tough and I take time away to do other activities/ recharge,
+        Focus, self awareness and determination will help me when I am faced with obstacles. 
+        <br><br>
+        <u>Share an example from your experience of where you were trying to work productively with others, but there was
         resistance or tension. Discuss the strategies you used at that time, how effective they were, and your
-        reflections on what other strategies you would try now, and why.
+        reflections on what other strategies you would try now, and why.</u>
+        <br><br>
+        - In my latest job, there was always conflict when ideas clashed and in our ways of communication. I always took a step back in these situations 
+        and was able to talk to the person in a way they would understand. Sometimes it was very challenging, but taking time away, reflecting and creating good 
+        boundaries really helped!
+        <br><br>
       </p>
     </div>
 
